--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "create-react-app": "^3.0.1",
     "md5": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
